# sales-copilot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
src/: cli.py  main.py
src/ingestion/: chunker.py  embedder.py  parser.py  pipeline.py  store_pipeline.py  tagger.py  utils.py
src/llm/: generator.py  ollama_provider.py  prompt.py
src/models/: schema.py
src/retrieval/: filters.py  query_intent.py  reranker.py  retriever.py
src/storage/: metadata_store.py  vector_store.py
src/utils/: config.py  constants.py
tests/: test_ingestion.py  test_parser.py  test_retrieval.py
