[project]
name = "sales-copilot"
version = "0.1.0"
description = "A chatbot that helps sales users understand and summarise their past sales calls"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "sentence-transformers>=5.3.0",
    "sqlite-utils>=3.39",
    "typer>=0.24.1",
]
